feature: Fixed some bugs. Added docker-compose. Cleaned README
